--- a/index.html
+++ b/index.html
@@ -10,77 +10,96 @@
 <body>
   <header>
     <div class="container">
-      <h1 data-aos="fade-down">Gowsica S</h1>
-      <p data-aos="fade-down" data-aos-delay="200">Aspiring Professional in IT | Web Developer</p>
+      <h1 data-aos="fade-down">Gowsica Sangeetha</h1>
+      <p data-aos="fade-down" data-aos-delay="200">
+        Coimbatore | sragowsica@gmail.com | +91 9095888124
+      </p>
     </div>
   </header>
 
   <nav class="navbar">
-    <a href="#about">About</a>
+    <a href="#objective">Objective</a>
     <a href="#education">Education</a>
     <a href="#training">Training</a>
     <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
     <a href="#achievements">Achievements</a>
     <a href="#contact">Contact</a>
   </nav>
 
   <main>
-    <section id="about" class="section" data-aos="fade-up">
-      <h2>About Me</h2>
-      <p>I am a final-year BSc CS student at Sri Ramakrishna College of Arts and Science for Women, Coimbatore. My interests lie in full-stack web development and system analysis. I am passionate about crafting responsive and user-centric web applications.</p>
+    <section id="objective" class="section" data-aos="fade-up">
+      <h2>Career Objective</h2>
+      <p>
+        Aspiring product marketer with a strong technical foundation in web development and a passion for storytelling, organization, and cross-functional teamwork. Eager to support go-to-market strategies, content creation, and campaign execution for innovative SaaS or B2B products. Committed to continuous learning and making a meaningful impact in a fast-paced environment.
+      </p>
     </section>
 
     <section id="education" class="section" data-aos="fade-right">
       <h2>Education</h2>
       <ul>
-        <li><strong>BSc Computer Science</strong>, Sri Ramakrishna College for Women (2021-2024)</li>
-        <li><strong>HSC</strong>, Government Girls Higher Secondary School (2020-2021)</li>
-        <li><strong>SSLC</strong>, Government Girls Higher Secondary School (2018-2019)</li>
+        <li><strong>B.Tech – Artificial Intelligence and Data Science</strong>, SNS College of Engineering (2021–2025)</li>
+        <li><strong>CGPA:</strong> 8.5 / 10</li>
       </ul>
     </section>
 
     <section id="training" class="section" data-aos="fade-left">
-      <h2>Training</h2>
+      <h2>Training & Certifications</h2>
       <ul>
-        <li>Completed training in Web Designing and Development, Soft Solution, Coimbatore</li>
-        <li>Completed Tally and Typewriting Junior Courses</li>
+        <li><strong>Full Stack Development – NxtWave (Jan 2024 – Present)</strong>
+          <ul>
+            <li>HTML, CSS, JavaScript, React, Node.js, MongoDB</li>
+            <li>Developed full-stack apps with backend integration</li>
+            <li>Improved time management and execution</li>
+          </ul>
+        </li>
+        <li><strong>Coding – Cogtis Technologies Pvt Ltd (Oct 2021 – Mar 2023)</strong>
+          <ul>
+            <li>C, C++, Java fundamentals</li>
+            <li>Practiced logic building and structured thinking</li>
+          </ul>
+        </li>
       </ul>
     </section>
 
     <section id="skills" class="section" data-aos="fade-up">
       <h2>Skills</h2>
-      <div class="skills-grid">
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>JavaScript</span>
-        <span>Java</span>
-        <span>Python</span>
-        <span>C</span>
-        <span>MySQL</span>
-        <span>Photoshop</span>
-        <span>Excel</span>
-        <span>Word</span>
-      </div>
+      <ul>
+        <li><strong>Marketing & Soft Skills:</strong> Team leadership, communication, campaign coordination</li>
+        <li><strong>Technical Skills:</strong> HTML, CSS, JavaScript, ReactJS, Java, SQL</li>
+        <li><strong>Tools:</strong> GitHub, Notion, Canva, Google Workspace, CorelDraw</li>
+        <li><strong>Languages:</strong> English, Hindi (spoken)</li>
+      </ul>
+    </section>
+
+    <section id="projects" class="section" data-aos="fade-up">
+      <h2>Projects / Leadership & Initiatives</h2>
+      <ul>
+        <li>Organized web dev workshops for peers</li>
+        <li>Led a team of 5 in coding challenges</li>
+        <li>Awarded Best Coder in Code-a-thon</li>
+        <li>Attended App Dev, AR/VR webinars</li>
+        <li>Volunteered in blood donation camp, nominated for Social Responsibility</li>
+      </ul>
     </section>
 
     <section id="achievements" class="section" data-aos="fade-up">
       <h2>Achievements</h2>
       <ul>
-        <li>Won first prize in debugging at Nehru Arts and Science College</li>
-        <li>Won second prize in Quiz at Sri Krishna Arts and Science College</li>
-        <li>Participated in over 8 intercollegiate events</li>
+        <li>2nd place in State-Level Judo – discipline and resilience</li>
+        <li>Nominated for Social Responsibility – leadership and reliability</li>
       </ul>
     </section>
 
     <section id="contact" class="section" data-aos="zoom-in">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:gowsicapselvi@gmail.com">sragowsica@gmail.com</a></p>
+      <p>Email: <a href="mailto:sragowsica@gmail.com">sragowsica@gmail.com</a></p>
       <p>Phone: +91 9095888124</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Gowsica P | All rights reserved</p>
+    <p>© 2025 Gowsica Sangeetha | All rights reserved</p>
   </footer>
 
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
